--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "babel src -d dist && cp package.json dist/package.json",
     "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +20,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0"
+  },
+  "devDependencies": {
+    "copy-files": "^0.1.0"
   }
 }
